--- a/tic-tac-toe.css
+++ b/tic-tac-toe.css
@@ -1,12 +1,18 @@
 #main {
-	width: 61em;
-	max-width: 100%;
-	*zoom: 1;
-	margin: auto;
+  width: 61em;
+  max-width: 100%;
+  *zoom: 1;
+  margin: auto;
+}
+
+#main h1 {
+  font-family: 'Permanent Marker', cursive; 
+  font-size: 4em;
+  text-align: center;
 }
 
 #game {
-	margin: auto;
-	display: block;
-	border: 1px solid #ccc;
+  margin: auto;
+  display: block;
+  border: 1px solid #ccc;
 }
